# ENCORE

./: .buildinfo  .gitignore  MANIFEST.in  README.md  acknowledgments.html  codeFunctions.html  encore.py  environment.yml  genindex.html  index.html  installation.html  main.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  usage.html
.github/workflows/: linux-compatibility.yml  macos-compatibility.yml  sphinx.yml  tests.yml  windows-compatibility.yml
_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt  usage.rst.txt
_sources/api/data/: assign_data.rst.txt  load_data.rst.txt
_sources/api/plotters/: MatplotlibWidget.rst.txt  encore.rst.txt
_sources/extending/: running_batch_analyses.rst.txt
_sources/user_guide/: usage.rst.txt
_static/: documentation_options.js
analysis/Cell-Assembly-Detection/: assembly_activity.m  assembly_patterns.m
analysis/NeuralEnsembles/AssemblyGui/: SaveFigures.m  plot_core_cells.m  plot_ens_seq.m  raster2ens_by_density.m  subSample_ensembles_pca.m
analysis/NeuralEnsembles/AssemblyGui/analysis_codes/: decisionGraph.m  delta_from_dist_mat.m  ens_raster_from_templates.m  ensembles_pca.m  filter_ens_by_inner_corr.m  find_core_cells_by_correlation.m  find_ens_by_density.m  hist2d.m  paraSetv2.m  randi_with_int.m
analysis/NeuralEnsembles/SVDEnsembles/: calc_scut.m  findSVDensemble.m
analysis/NeuralEnsembles/full recording/: clustering_indexes_for_global_clustering.m
analysis/NeuralEnsembles/full recording synth test/: subsamp_synth_test_workflowv2.m
analysis/NeuralEnsembles/validation/: MakeEnsembles_fix_rate.m  get_performance_rh.m  script_performance_N.m  sort_by_equivalence_rh.m
analysis/SGC_neural_assembly_detection/: EnsemblesGUI_linker_SGC.m
analysis/SGC_neural_assembly_detection/preprocessing/calcium-fluorescence-processing/: findSignificantDF_FCoactivity.m
analysis/SVD/: Stoixeion.m  calc_scut.m  findHighactFrames.m
analysis/SVD/AGORA/: Edos_from_Sindex.m  Edos_from_Sindex_eig.m  Edos_from_Sindex_eig.m~  Edos_from_Sindex_svd.m  GGcallLC.m  GKcallLC.m  clusterLC.m
analysis/SVD/AGORA/FUZZCLUST/: Kmedoid.m
analysis/SVD/AXIS/: Pkedos.m  RasNum.m  SharedCells.asv  centroids.m  sindex.m
analysis/SVD/Otros/: SortSRR.m  optnumber.m
analysis/SVD/PHYSIS/: Nedos.m  Nedos_b.m  SRactive.m  compara.asv  compara.m  diversity.asv  diversity.m  sindex.m
analysis/SVD/TROPOS/: lle.m  lleeLC.m
analysis/Xsembles2P/Xsembles/: Get_Xsembles.m
analysis/sgc-assembly-detection/: SGC.py
api/: main_window.html  runners.html  utils.html
api/data/: assign_data.html  index.html  load_data.html
api/plotters/: MatplotlibWidget.html  encore.html  encore_plots.html  index.html
api/validators/: algorithm_inputs.html  algorithm_parameters.html  algorithm_results.html  index.html  runners_config.html
concepts/: overview.html
config/: default_parameters.json  encore_runners_config.yaml
data/: assign_data.py  load_data.py
docs/: requirements.txt
docs/source/: acknowledgments.rst  codeFunctions.rst  conf.py  index.rst  installation.rst  quickstart.rst  usage.rst
docs/source/api/: main_window.rst  runners.rst  utils.rst  validators.rst
docs/source/concepts/: overview.rst
docs/source/extending/: adding_algorithms.rst
docs/source/user_guide/: usage.rst
examples/: Example_HDF5_big.h5  Example_HDF5_min.h5  Example_MATLAB.mat  Example_NPZ.npz
extending/: adding_algorithms.html  running_batch_analyses.html
gui/: MainWindow.py  MainWindow.ui  MatplotlibWidget.py
plots/: plots.py
plotters/: encore.py  encore_plots.py
runners/: encore.py  svd_run.py
src/ENCORE/: main.py
src/ENCORE/plotters/: encore.py
src/ENCORE/utils/: data_converters.py  metrics.py
src/encore/: __init__.py  main.py
src/encore/config/: encore_runners_config.yaml
src/encore/data/: load_data.py
src/encore/gui/: MainWindow.ui  MatplotlibWidget.py
src/encore/plotters/: MatplotlibWidget.py  encore.py  encore_plots.py
src/encore/runners/: encore.py
src/encore/utils/: metrics.py  parameters_validators.py  text_formatting.py
src/encore/validators/: algorithm_inputs.py  algorithm_parameters.py  algorithm_results.py  runners_config.py
src/tmp/: __init__.py
src/tmp/data/: assign_data.py
src/tmp/gui/: MainWindow.ui
src/tmp/plotters/: encore.py
tests/: test_basic.py  test_runners.py
user_guide/: usage.html
utils/: analysis_fields_formatters.py  data_converters.py  parameters_validators.py
(+68 files in other folders)
